# ALPHA_WATCH

./: .gitignore  README.md  example.http  pyproject.toml
app/: __init__.py  auth.py  auth_routes.py  company_lookup.py  database.py  main.py  market_routes.py  models.py  repository.py  routes.py  schemas.py
tests/: __init__.py  conftest.py  test_auth.py  test_stocks.py
ui/: streamlit_app.py
