[project]
name = "alphawatch"
version = "0.1.0"
description = "FastAPI backend microservice for a personal stock watchlist"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.0,<3.0",
    "requests>=2.32,<3.0",
    "streamlit>=1.40,<2.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "httpx>=0.27,<1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
